--- a/templates/about/about.html
+++ b/templates/about/about.html
@@ -54,12 +54,22 @@
         {{ t("support_text") }}
       </p>
 
-      <a href="https://github.com/Nexius2/VODUM/issues"
-         target="_blank"
-         class="inline-flex items-center gap-2 px-6 py-3 rounded-lg
-                bg-primary hover:bg-primary-dark text-white text-sm font-medium transition">
-        🐛 {{ t("open_an_issue") }}
-      </a>
+		<div class="flex flex-col items-center gap-3">
+		  <a href="https://github.com/Nexius2/VODUM/issues"
+			 target="_blank"
+			 class="inline-flex items-center gap-2 px-6 py-3 rounded-lg
+					bg-primary hover:bg-primary-dark text-white text-sm font-medium transition">
+			🐛 {{ t("open_an_issue") }}
+		  </a>
+
+		  <a href="https://discord.gg/5PU7TnegZt"
+			 target="_blank"
+			 class="inline-flex items-center gap-2 px-6 py-3 rounded-lg
+					bg-indigo-600 hover:bg-indigo-700 text-white text-sm font-medium transition">
+			💬 Discord
+		  </a>
+		</div>
+
     </div>
 
     <!-- SEPARATOR (desktop only) -->
